구글 사이트 바로가기 버튼 추가

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div style="text-align:center; margin: 30px 0;">
+        <a href="https://sites.google.com/view/circlemain/home" target="_blank" style="display:inline-block;padding:12px 24px;background:#4285f4;color:#fff;border-radius:6px;text-decoration:none;font-weight:bold;">
+            동그라미 교육원 구글 사이트 바로가기
+        </a>
+    </div>
     <header>
         <nav>
             <div class="nav-container">
