index.html 구글 사이트로 즉시 리디렉션하도록 변경

--- a/index.html
+++ b/index.html
@@ -2,76 +2,11 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Homepage</title>
-    <link rel="stylesheet" href="styles.css">
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
+    <meta http-equiv="refresh" content="0; url=https://sites.google.com/view/circlemain/home">
+    <title>동그라미 교육원 바로가기</title>
 </head>
 <body>
-    <div style="text-align:center; margin: 30px 0;">
-        <a href="https://sites.google.com/view/circlemain/home" target="_blank" style="display:inline-block;padding:12px 24px;background:#4285f4;color:#fff;border-radius:6px;text-decoration:none;font-weight:bold;">
-            동그라미 교육원 구글 사이트 바로가기
-        </a>
-    </div>
-    <header>
-        <nav>
-            <div class="nav-container">
-                <h1>My Homepage</h1>
-                <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-
-    <main>
-        <section id="hero">
-            <div class="hero-content">
-                <h2>Welcome to My Homepage</h2>
-                <p>This is a static version of my personal website.</p>
-            </div>
-        </section>
-
-        <section id="about">
-            <div class="container">
-                <h2>About Me</h2>
-                <div class="about-content">
-                    <img src="images/profile.jpg" alt="Profile Picture" class="profile-image">
-                    <div class="about-text">
-                        <p>안녕하세요! 저는 웹 개발에 관심이 있는 개발자입니다.</p>
-                        <p>이 웹사이트는 Django 프로젝트에서 정적 사이트로 변환되었습니다.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="projects">
-            <div class="container">
-                <h2>Projects</h2>
-                <div class="project-grid">
-                    <!-- Project cards will be added here -->
-                </div>
-            </div>
-        </section>
-
-        <section id="contact">
-            <div class="container">
-                <h2>Contact</h2>
-                <div class="contact-content">
-                    <p>Email: your.email@example.com</p>
-                    <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 My Homepage. All rights reserved.</p>
-        </div>
-    </footer>
+    <p>잠시만 기다리시면 동그라미 교육원 구글 사이트로 이동합니다.<br>
+    <a href="https://sites.google.com/view/circlemain/home">이동이 안되면 여기를 클릭하세요.</a></p>
 </body>
 </html> 
